--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.servlet.context-path = /workintech
 server.port = 9000
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username = postgres
-spring.datasource.password = 1597sero
-spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url = 
+spring.datasource.username = 
+spring.datasource.password = 
+spring.jpa.hibernate.ddl-auto = 
